--- a/sass/base/_contanier.scss
+++ b/sass/base/_contanier.scss
@@ -1,7 +1,7 @@
 .contanier {
   padding-left: 15px;
   padding-right: 15px;
-  min-width: 480px;
+  width: 100%;
   margin: 0 auto;
   .page-header & {
     display: flex;
