--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ img {
 .contanier {
   padding-left: 15px;
   padding-right: 15px;
-  min-width: 480px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -108,7 +108,6 @@ img {
 
 .page-header {
   border-bottom: 1px solid #ececec;
-  min-width: 480px;
 }
 
 .main-nav {
