--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,6 @@ img {
 @media screen and (min-width: 480px) {
   .contanier {
     width: 480px;
-    margin: 0 auto;
   }
 }
 
@@ -108,6 +107,7 @@ img {
 
 .page-header {
   border-bottom: 1px solid #ececec;
+  min-width: 480px;
 }
 
 .main-nav {
@@ -182,11 +182,19 @@ img {
 
 .burger__btn,
 .mobile-btn__close {
-  display: block;
-  padding: 0;
-  border: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   background-color: transparent;
   cursor: pointer;
+  padding: 0;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: none;
 }
 
 .burger__icon,
