--- a/sass/components/_mobile-btn.scss
+++ b/sass/components/_mobile-btn.scss
@@ -1,11 +1,14 @@
 .burger__btn,
 .mobile-btn__close {
-  display: block;
-
-  padding: 0;
-  border: none;
+  align-items: center;
+  display: flex;
   background-color: transparent;
   cursor: pointer;
+  padding: 0;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: none;
 }
 
 .burger__icon,
