--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ img {
 @media screen and (min-width: 480px) {
   .contanier {
     width: 480px;
+    margin: 0 auto;
   }
 }
 
@@ -182,19 +183,11 @@ img {
 
 .burger__btn,
 .mobile-btn__close {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+  padding: 0;
+  border: none;
   background-color: transparent;
   cursor: pointer;
-  padding: 0;
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  border: none;
 }
 
 .burger__icon,
