--- a/sass/base/_contanier.scss
+++ b/sass/base/_contanier.scss
@@ -11,6 +11,7 @@
 
   @media screen and (min-width: 480px) {
     width: 480px;
+    margin: 0 auto;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
